trim energyhubid
